# synth-odyssey

./: .gitmodules  CMakeLists.txt  README.md  adsr.cpp  adsr.lua  ar.cpp  ar.lua  coroutines.h  coroutines.hpp  hpf.cpp  hpf.hpp  hpf.lua  imgui.ini  kbd.cpp  kbd.hpp  kbd.lua  lfo.cpp  lfo.lua  main.cpp  main.lua  mix.cpp  mix.lua  noise.cpp  noise.hpp  noise.lua  pcm.cpp  pcm.lua  presets.ini  sh.cpp  sh.hpp  sh.lua  synth.cpp  synth.hpp  synth.lua  ui.cpp  ui.h  vca.cpp  vca.hpp  vca.lua  vcf.cpp  (+7 more)
core/: CMakeLists.txt  adsr.cpp  adsr.hpp  ar.cpp  ar.hpp  control.cpp  control.hpp  hpf.cpp  hpf.hpp  kbd.cpp  kbd.hpp  lfo.cpp  lfo.hpp  mix.cpp  mix.hpp  noise.cpp  noise.hpp  reverb.cpp  reverb.hpp  sh.cpp  sh.hpp  synth.cpp  synth.hpp  vca.cpp  vca.hpp  vcf.cpp  vcf.hpp  vco1.cpp  vco1.hpp  vco2.cpp  vco2.hpp
drivers/: alsa.cpp
drivers/alsa/: CMakeLists.txt  alsa.cpp
lib/: adsr.cpp  ar.cpp  lfo.cpp  lfo.hpp  vcf.cpp  vcf.hpp  vco2.cpp
qt/: CMakeLists.txt  QSynth.cpp  QSynth.hpp  Rocker.qml  Slider.qml  SliderH.qml  main.cpp  main.qml  qml.qrc
ui/: CMakeLists.txt  ContextMenu.qml  GateLed.qml  PresetPanel.qml  QSynth.cpp  QSynth.hpp  SliderB.qml  TransposeRibbon.qml  TriggerLed.qml  imgui.cpp  main.cpp  main.qml  qml.qrc
ui/imgui/: CMakeLists.txt  main.cpp  ui.cpp
ui/qt/: CMakeLists.txt  QSynth.cpp  QSynth.hpp  Rocker.qml  Slider.qml  Synth.qml  main.cpp  main.qml  qml.qrc  qmldir  qsynth.cpp  qsynth.h
